# astrakv

./: .gitignore  CMakeLists.txt  astrakv.md
cmake/: CPM.cmake  Dependencies.cmake
examples/: basic_c.c  basic_cpp.cpp  bench.cpp  bench_simple.cpp
include/astrakv/: kv.h  kv.hpp
rust/: Cargo.toml  build.rs
rust/benches/: kv_bench.rs
rust/src/: lib.rs
src/: bitmap.hpp  dash_map.hpp  engine.cpp  engine.hpp  eviction_2q.cpp  eviction_2q.hpp  eviction_policy.hpp  hll.hpp  kv.cpp  kv_impl.cpp  linked_list.hpp  macros.hpp  metadata.cpp  metadata.hpp  rocksdb_adapter.cpp  rocksdb_adapter.hpp  simd_utils.hpp  stream_data.cpp  stream_data.hpp  vector_data.cpp  vector_data.hpp
src/zset/: bplustree.hpp  bplustree_internal.hpp  bplustree_zset.cpp  bplustree_zset.hpp
tests/cpp/: CMakeLists.txt  kv_test.cpp
